--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,9 @@
+NotEmpty.usuario.identificador=El identificador es requerido
 NotEmpty.usuario.nombre=El nombre es requerido
 NotEmpty.usuario.apellido=El apellido es requerido
 NotEmpty.usuario.username=El nombre de usuario es requerido
 NotEmpty.usuario.password=La password es requerida
 NotEmpty.usuario.email=El correo electrónico es requerido
 Email.usuario.email=El correo electrónico debe tener el formato correcto (con @)
+Pattern.usuario.identificador=El identificador tiene un formato incorrecto
+Size.usuario.username=El nombre de usuario debe ser mayor a 3 caracteres y menor a 8
