feat(editor-validation-domain): Se introduce la clase de dominio Role, con su validacion y editores.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,3 +8,6 @@ Email.usuario.email=El correo electrónico debe tener el formato correcto (con @
 Pattern.usuario.identificador=El identificador tiene un formato incorrecto
 Size.usuario.username=El nombre de usuario debe ser mayor a 3 caracteres y menor a 8
 IdentificadorRegex.usuario.identificador=Formato del identificador invalido
+typeMismatch.java.lang.Integer=Debe ser un número entero
+typeMismatch.java.util.Date=Debe ser una fecha válida 
+Past.usuario.fechaNacimiento=Debe ser una fecha en pasado
